--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "mocha ."
+    "test": "jest ."
   },
   "author": "Lia Papailiou",
   "license": "MIT",
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "gravatar": "^1.8.0",
+    "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.1.2",
     "mongoose": "^5.9.13",
@@ -26,7 +27,7 @@
     "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-jest": "^23.10.0",
     "nodemon": "^2.0.3"
   }
 }
