--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "jest ."
+    "test": "jest .",
+    "start": "node server",
+    "server": "nodemon server"
   },
   "author": "Lia Papailiou",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "gravatar": "^1.8.0",
