--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern_project",
   "version": "1.0.0",
   "description": "This is a test project using the MERN stack",
-  "main": "server,js",
+  "main": "server.js",
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
